BuildHughes/translation-tool/inputs/source_meta/objects/HnsRegistrationParas__x.object
<CustomObject>
    <description>HnsRegistrationParas</description>
    <externalDataSource>PSView</externalDataSource>
    <externalName>HnsRegistrationParas</externalName>
    <fields>
        <fullName>ATTRIBUTE_NAME__c</fullName>
        <description>ATTRIBUTE_NAME</description>
        <externalDeveloperName>ATTRIBUTE_NAME</externalDeveloperName>
        <label>Register Parameter Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATTRIBUTE_VALUE__c</fullName>
        <description>ATTRIBUTE_VALUE</description>
        <externalDeveloperName>ATTRIBUTE_VALUE</externalDeveloperName>
        <label>Register Parameter Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CENTRAL_DB_ID__c</fullName>
        <description>CENTRAL_DB_ID</description>
        <externalDeveloperName>CENTRAL_DB_ID</externalDeveloperName>
        <label>Central DB ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROW_ADDED_DTTM__c</fullName>
        <description>ROW_ADDED_DTTM</description>
        <externalDeveloperName>ROW_ADDED_DTTM</externalDeveloperName>
        <label>Created Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROW_ADDED_OPRID__c</fullName>
        <description>ROW_ADDED_OPRID</description>
        <externalDeveloperName>ROW_ADDED_OPRID</externalDeveloperName>
        <label>Created By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROW_LASTMANT_DTTM__c</fullName>
        <description>ROW_LASTMANT_DTTM</description>
        <externalDeveloperName>ROW_LASTMANT_DTTM</externalDeveloperName>
        <label>Modified Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROW_LASTMANT_OPRID__c</fullName>
        <description>ROW_LASTMANT_OPRID</description>
        <externalDeveloperName>ROW_LASTMANT_OPRID</externalDeveloperName>
        <label>Modified By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SETID__c</fullName>
        <description>SETID</description>
        <externalDeveloperName>SETID</externalDeveloperName>
        <label>Set ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SITE_ID__c</fullName>
        <description>SITE_ID</description>
        <externalDeveloperName>SITE_ID</externalDeveloperName>
        <label>Site ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_TELE_ATTR_TYPE__c</fullName>
        <description>Z_TELE_ATTR_TYPE</description>
        <externalDeveloperName>Z_TELE_ATTR_TYPE</externalDeveloperName>
        <label>Attribute Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>HnsRegistrationParas</label>
    <pluralLabel>HnsRegistrationParas</pluralLabel>
</CustomObject>